Resolve partial Refaster matches